[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic_control_env"
version = "1.0.0"
description = "Autonomous traffic control environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "numpy>=1.24",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "gradio>=4.0",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
# No explicit packages – rely on automatic discovery (or leave empty)
packages = []